# graph-extracter

./: .gitignore  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/hooks/: copilot-cli-policy.json  hooks.json
.github/hooks/scripts/: session-banner.sh
.github/workflows/: ci.yml
api/: app.py  schemas.py
docs/: linkml.txt  流程数据.txt
dto/: Graph.py
graph/: __init__.py  extractor.py  models.py  retriever.py  schema_loader.py  storage.py  utils.py
schema/: customer_service.yaml  technology.yaml
tests/: conftest.py  test_extractor.py  test_models.py  test_real_data.py  test_schema_loader.py  test_search_traverse.py  test_storage.py  test_subgraph.py  test_utils.py
